feat: add CategoriesController and Categories/Index view with subcategories
Create CategoriesController and Categories/Index.cshtml for the category page
with static example content (to be replaced with dynamic data later).
Add new SCSS partials for styling and link the Categories/Index page in the navigation menu.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -101,73 +101,84 @@
                 <!-- PRODUKTKATEGORIER, dynamiseras senare) -->
                 <ul class="menu-cats">
                 <li class="has-dropdown">
-                    <a href="#">WELL
+                    <a asp-controller="Categories" asp-action="Index">WELL
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                     </svg>
                     </a>
-                    @Html.Partial("_DropdownMenuPartial")
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">PLAST
+                    <a asp-controller="Categories" asp-action="Index">PLAST
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                     </svg>
                     </a>
-                    @Html.Partial("_DropdownMenuPartial")
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">E-HANDEL
+                    <a asp-controller="Categories" asp-action="Index">E-HANDEL
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                     </svg>
                     </a>
-                    @Html.Partial("_DropdownMenuPartial")
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">STÖTDÄMPNING 
+                    <a asp-controller="Categories" asp-action="Index">STÖTDÄMPNING
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                        </svg>
-                    </a>@Html.Partial("_DropdownMenuPartial")
+                    </svg>
+                    </a>
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">TEJP 
+                    <a asp-controller="Categories" asp-action="Index">TEJP
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg></a>@Html.Partial("_DropdownMenuPartial")
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                    </svg>
+                    </a>
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">PALLEMBALLAGE 
+                    <a asp-controller="Categories" asp-action="Index">PALLEMBALLAGE
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg></a>@Html.Partial("_DropdownMenuPartial")
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                    </svg>
+                    </a>
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">TRÄEMBALLAGE 
+                    <a asp-controller="Categories" asp-action="Index">TRÄEMBALLAGE
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg></a>@Html.Partial("_DropdownMenuPartial")
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                    </svg>
+                    </a>
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">MASKINER 
+                    <a asp-controller="Categories" asp-action="Index">MASKINER
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg></a>@Html.Partial("_DropdownMenuPartial")
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                    </svg>
+                    </a>
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
 
                 <li class="has-dropdown">
-                    <a href="#">ÖVRIGT 
+                    <a asp-controller="Categories" asp-action="Index">ÖVRIGT
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg></a>@Html.Partial("_DropdownMenuPartial")
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                    </svg>
+                    </a>
+                    @await Html.PartialAsync("_DropdownMenuPartial")
                 </li>
                 </ul>
             </nav>
